--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       --text-muted: #69818D;
       --highlight: #00C9B1;
       --shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
-      --nav-glass: rgba(25, 70, 83, 0.3);
+      --nav-glass: rgba(13, 31, 35, 0.6); /* Darker glass for nav */
+      --nav-text: #ffffff;
     }
 
     [data-theme="light"] {
@@ -33,7 +34,8 @@
       --text-muted: #6c757d;
       --highlight: #00C9B1;
       --shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      --nav-glass: rgba(255, 255, 255, 0.7);
+      --nav-glass: rgba(255, 255, 255, 0.85);
+      --nav-text: #212529;
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -110,7 +112,7 @@
     }
     .btn.secondary:hover { background: #fff; color: #000; }
 
-    /* NAVIGATION - VISIBLE ON DESKTOP & MOBILE */
+    /* NAVIGATION - UPDATED COLOR & NO UNDERLINE */
     nav {
       position: fixed;
       top: 0; width: 100%;
@@ -132,7 +134,7 @@
       gap: 50px;
     }
     .desktop-menu a {
-      color: #fff;
+      color: var(--nav-text);
       font-weight: 500;
       font-size: 18px;
       padding: 12px 28px;
@@ -140,6 +142,7 @@
       position: relative;
       overflow: hidden;
       transition: color .4s;
+      text-decoration: none; /* Ensures no underline ever */
     }
     .desktop-menu a::before {
       content: '';
@@ -167,7 +170,7 @@
     .hamburger-btn {
       background: none;
       border: none;
-      color: #fff;
+      color: var(--nav-text);
       font-size: 32px;
       cursor: pointer;
     }
@@ -205,7 +208,7 @@
     .mobile-menu.active { right: 0; }
     .mobile-menu ul { list-style: none; }
     .mobile-menu li { margin: 30px 0; }
-    .mobile-menu a { color: var(--text); font-size: 20px; font-weight: 500; }
+    .mobile-menu a { color: var(--text); font-size: 20px; font-weight: 500; text-decoration: none; }
 
     /* SECTIONS */
     section { padding: 120px 60px; max-width: 1400px; margin: auto; }
