Update Cisco Meraki logo source in index.html

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
     <h2>Technologies & Platforms I've Worked With</h2>
     <div class="tech-grid">
       <div class="tech-item">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Cisco_logo.svg" alt="Cisco Meraki" loading="lazy">
+        <img src="https://brand-assets.security.cisco.com/secure/meraki-dark.svg" alt="Cisco Meraki" loading="lazy">
       </div>
       <div class="tech-item">
         <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/ESET_logo.svg" alt="ESET NOD32" loading="lazy">
