Update ESET logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         <img src="https://brand-assets.security.cisco.com/secure/meraki-dark.svg" alt="Cisco Meraki" loading="lazy">
       </div>
       <div class="tech-item">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/ESET_logo.svg" alt="ESET NOD32" loading="lazy">
+        <img src="https://www.bing.com/ck/a?!&&p=29972baffca0a227907b133a832575287bc11a70d5a6ee5c2fe2d5405f56e551JmltdHM9MTc2ODE3NjAwMA&ptn=3&ver=2&hsh=4&fclid=2c6ea285-c1b5-6fdd-3b61-b45ac0006e88&u=a1L2ltYWdlcy9zZWFyY2g_cT1lc2V0K25vZCszMitzdmcrbG9nbyZpZD04OEYzNDg0MEZBQzdCOEMxMDdFRDQ4ODgzNDRDMTUwRUIyM0Q2QjdGJkZPUk09SUFDRklS&ntb=1g" alt="ESET NOD32" loading="lazy">
       </div>
       <div class="tech-item">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Windows_11_logo.svg" alt="Windows 10/11" loading="lazy">
