--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
       overflow-x: hidden;
     }
 
-    /* Subtle watercolor overlay */
     .watercolor-bg {
       position: fixed;
       inset: 0;
@@ -223,13 +222,13 @@
     .about p { font-size: 18px; color: var(--text-muted); }
     .about img { width: 100%; border-radius: 20px; box-shadow: var(--shadow); }
 
-    .journey-grid, .services-grid {
+    .journey-grid, .services-grid, .projects-grid, .stories-grid, .tech-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 40px;
       margin-top: 50px;
     }
-    .journey-card, .service-card {
+    .journey-card, .service-card, .project-card, .story-card {
       background: var(--glass);
       backdrop-filter: var(--blur);
       border: 1px solid var(--glass-border);
@@ -238,9 +237,28 @@
       box-shadow: var(--shadow);
       transition: transform .4s;
     }
-    .journey-card:hover, .service-card:hover { transform: translateY(-12px); }
+    .journey-card:hover, .service-card:hover, .project-card:hover, .story-card:hover { transform: translateY(-12px); }
     .service-card { text-align: center; }
     .service-card i { font-size: 60px; color: var(--highlight); margin-bottom: 25px; display: block; }
+    .project-card h3, .story-card h3 { color: var(--highlight); margin-bottom: 15px; }
+    .project-card p, .story-card p { color: var(--text-muted); }
+
+    .tech-grid { grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
+    .tech-item img {
+      width: 100%; height: 80px; object-fit: contain; filter: brightness(0.9);
+      transition: all .4s;
+    }
+    .tech-item img:hover { filter: brightness(1); transform: scale(1.1); }
+
+    .partner-badges {
+      display: flex;
+      justify-content: center;
+      gap: 80px;
+      margin: 100px 0 60px;
+      flex-wrap: wrap;
+    }
+    .partner-badges img { height: 110px; object-fit: contain; transition: transform .4s; }
+    .partner-badges img:hover { transform: scale(1.1); }
 
     .contact-grid {
       display: grid;
@@ -248,6 +266,8 @@
       gap: 80px;
       margin-top: 50px;
     }
+    .contact-info h3 { color: var(--highlight); margin-bottom: 30px; }
+    .contact-info p { font-size: 18px; color: var(--text-muted); margin: 20px 0; }
     .calendly-wrapper {
       min-height: 720px;
       border-radius: 24px;
@@ -318,6 +338,23 @@
     }
     .copyright a { color: var(--highlight); text-decoration: none; }
 
+    .whatsapp-float {
+      position: fixed;
+      bottom: 30px; right: 30px;
+      background: #25D366;
+      color: #fff;
+      width: 65px; height: 65px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 32px;
+      box-shadow: var(--shadow);
+      z-index: 999;
+      transition: transform .3s;
+    }
+    .whatsapp-float:hover { transform: scale(1.15); }
+
     @media (max-width: 900px) {
       section { padding: 100px 30px; }
       .about, .contact-grid { grid-template-columns: 1fr; text-align: center; }
@@ -346,6 +383,7 @@
         <a href="#journey" class="nav-item">Journey</a>
         <a href="#services" class="nav-item">Services</a>
         <a href="#projects" class="nav-item">Projects</a>
+        <a href="#stories" class="nav-item">Stories</a>
         <a href="#technologies" class="nav-item">Technologies</a>
         <a href="#contact" class="nav-item">Contact</a>
       </div>
@@ -384,23 +422,67 @@
           <img src="company1.png" alt="Company 1 logo" loading="lazy">
           <h3>Company Name 1</h3>
           <p class="year-title">2020 - 2022 | IT Support Specialist</p>
-          <ul>
-            <li>Provided hands-on IT support and troubleshooting</li>
-            <li>Managed endpoint devices and network configs</li>
-            <li>Resolved issues for 200+ users daily</li>
-          </ul>
+          <div class="details">
+            <ul>
+              <li>Provided hands-on IT support and troubleshooting in dynamic environments</li>
+              <li>Managed endpoint devices and basic network configurations</li>
+              <li>Resolved technical issues for 200+ users daily</li>
+              <li>Assisted in system migrations and software deployments</li>
+            </ul>
+          </div>
         </div>
         <div class="journey-card">
           <img src="company2.png" alt="Company 2 logo" loading="lazy">
           <h3>NGO / Organization Name</h3>
           <p class="year-title">2022 - 2024 | Systems Administrator</p>
-          <ul>
-            <li>Supported NGO and logistics infrastructure at scale</li>
-            <li>Implemented and maintained Microsoft 365 environments</li>
-            <li>Ensured system uptime for critical operations</li>
-          </ul>
+          <div class="details">
+            <ul>
+              <li>Supported NGO and logistics infrastructure at scale</li>
+              <li>Implemented and maintained Microsoft 365 environments</li>
+              <li>Managed user permissions and collaboration tools</li>
+              <li>Ensured system uptime for critical humanitarian operations</li>
+            </ul>
+          </div>
         </div>
-        <!-- Add remaining journey entries here -->
+        <div class="journey-card">
+          <img src="company3.png" alt="Company 3 logo" loading="lazy">
+          <h3>Current Company</h3>
+          <p class="year-title">2024 - Present | Senior IT Systems & Security Specialist</p>
+          <div class="details">
+            <ul>
+              <li>Led advanced infrastructure, networking, and cybersecurity projects</li>
+              <li>Deployed Kaspersky endpoint security across enterprise</li>
+              <li>Designed and implemented secure LAN/WLAN networks</li>
+              <li>Conducted security audits and incident response</li>
+            </ul>
+          </div>
+        </div>
+        <div class="journey-card">
+          <img src="company4.png" alt="Company 4 logo" loading="lazy">
+          <h3>Company Name 4</h3>
+          <p class="year-title">2018 - 2020 | Junior Network Engineer</p>
+          <div class="details">
+            <ul>
+              <li>Assisted in network setup and maintenance</li>
+              <li>Troubleshot connectivity issues</li>
+              <li>Implemented basic security protocols</li>
+              <li>Supported remote user access</li>
+            </ul>
+          </div>
+        </div>
+        <div class="journey-card">
+          <img src="company5.png" alt="Company 5 logo" loading="lazy">
+          <h3>Company Name 5</h3>
+          <p class="year-title">2017 - 2018 | IT Intern</p>
+          <div class="details">
+            <ul>
+              <li>Learned basic IT support tasks</li>
+              <li>Assisted with hardware installations</li>
+              <li>Documented system procedures</li>
+              <li>Gained experience in software troubleshooting</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -410,28 +492,96 @@
         <div class="service-card">
           <i>💻</i>
           <h3>IT Consultation</h3>
-          <p>Expert advice on system architecture, cloud migration, and tech strategy.</p>
+          <p>Expert advice on system architecture, infrastructure planning, cloud migration, and technology strategy tailored to your business needs.</p>
         </div>
         <div class="service-card">
           <i>🔧</i>
           <h3>Hardware & Software Repairs</h3>
-          <p>Diagnosis and repair of devices and software — remote & on-site.</p>
+          <p>Diagnosis and repair of laptops, desktops, servers, printers, and software issues — both remote and on-site support.</p>
+        </div>
+        <div class="service-card">
+          <i>🛒</i>
+          <h3>Tech Buyers Guide</h3>
+          <p>Personalized recommendations for purchasing laptops, networking gear, security tools, and software to fit your budget and requirements.</p>
         </div>
         <div class="service-card">
           <i>🌐</i>
           <h3>Network Setup & Security</h3>
-          <p>Design and secure wired/wireless networks, firewalls, VPNs.</p>
+          <p>Design, installation, and securing of wired/wireless networks, firewalls, VPNs, and endpoint protection for homes and businesses.</p>
         </div>
         <div class="service-card">
           <i>☁️</i>
-          <h3>Microsoft 365 & Cloud</h3>
-          <p>Setup, administration, migration, and optimization.</p>
+          <h3>Microsoft 365 & Cloud Solutions</h3>
+          <p>Setup, administration, migration, and optimization of Microsoft 365, Azure, email, and collaboration tools.</p>
         </div>
         <div class="service-card">
           <i>🛡️</i>
-          <h3>Cybersecurity</h3>
-          <p>Vulnerability assessments, AV deployment, audits & response.</p>
+          <h3>Cybersecurity Services</h3>
+          <p>Vulnerability assessments, antivirus deployment, security audits, and incident response planning.</p>
         </div>
+      </div>
+    </section>
+
+    <section id="projects" class="fade">
+      <h2>Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>IT Infrastructure Upgrade</h3>
+          <p>Designed and deployed LAN, wireless networks, and endpoint security for mid-sized organizations.</p>
+        </div>
+        <div class="project-card">
+          <h3>Endpoint Security Deployment</h3>
+          <p>Implemented Kaspersky Security Center for enterprise-wide endpoint protection and compliance.</p>
+        </div>
+        <div class="project-card">
+          <h3>Digital Logistics System</h3>
+          <p>Built internal systems to streamline logistics, procurement, and operational workflows.</p>
+        </div>
+        <div class="project-card">
+          <h3>Microsoft 365 Administration</h3>
+          <p>Managed users, permissions, collaboration tools, and migration projects.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="stories" class="fade">
+      <h2>Stories & Experiences</h2>
+      <div class="stories-grid">
+        <div class="story-card">
+          <h3>Working in High-Impact Environments</h3>
+          <p>Supporting NGO operations taught me how critical system uptime and security are when technology directly supports humanitarian work.</p>
+        </div>
+        <div class="story-card">
+          <h3>Learning Through Challenges</h3>
+          <p>From network failures to security incidents, each challenge strengthened my problem-solving and decision-making under pressure.</p>
+        </div>
+        <div class="story-card">
+          <h3>Growth Beyond Technical Skills</h3>
+          <p>Collaborating with diverse teams improved my communication, documentation, and leadership abilities.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="technologies" class="fade">
+      <h2>Technologies & Platforms I've Worked With</h2>
+      <div class="tech-grid">
+        <div class="tech-item"><img src="https://brand-assets.security.cisco.com/secure/meraki-dark.svg" alt="Cisco Meraki" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Windows_11_logo.svg" alt="Windows 10/11" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Ubuntu_logo.svg" alt="Ubuntu Linux" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Microsoft_365_%282022%29.svg" alt="Microsoft 365" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/ServiceNow_logo.svg" alt="ServiceNow" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Jira_Logo.svg" alt="Atlassian Jira" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Sage_Group_logo.svg" alt="Sage" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zoom_logo.svg" alt="Zoom" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Microsoft_Office_Teams_%282019%E2%80%932025%29.svg" alt="Microsoft Teams" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Logitech_logo.svg" alt="Logitech" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Kaspersky_Lab_logo.svg" alt="Kaspersky" loading="lazy"></div>
+        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Sophos_logo.svg" alt="Sophos" loading="lazy"></div>
+      </div>
+      <h3 style="font-size:28px; margin:80px 0 40px; color:var(--highlight); text-align:center;">Certified Partner Experience</h3>
+      <div class="partner-badges">
+        <img src="https://seeklogo.com/images/K/kaspersky-gold-partner-logo-4E4E4E4E4E-seeklogo.com.png" alt="Kaspersky Gold Partner" loading="lazy">
+        <img src="https://www.avanet.com/assets/sophos-platinum-partner-badge-2024.jpg" alt="Sophos Platinum Partner" loading="lazy">
       </div>
     </section>
 
@@ -442,7 +592,7 @@
           <h3>Get in Touch</h3>
           <p>Email: <a href="mailto:wanjerumarc@icloud.com">wanjerumarc@icloud.com</a></p>
           <p>Phone: <a href="tel:+256769593704">+256 769 593 704</a></p>
-          <p>Book a free 30-minute discovery call or reach out directly.</p>
+          <p style="margin-top:30px;">I'm available for freelance projects, consultations, repairs, and collaboration. Book a free 30-minute discovery call below or reach out directly.</p>
         </div>
         <div class="calendly-wrapper">
           <div class="calendly-inline-widget"
@@ -469,6 +619,7 @@
           <li><a href="#journey">Journey</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#stories">Stories</a></li>
           <li><a href="#technologies">Technologies</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -497,7 +648,7 @@
     <div class="social-icons">
       <a href="https://www.linkedin.com/in/your-profile" target="_blank" aria-label="LinkedIn">in</a>
       <a href="https://github.com/your-username" target="_blank" aria-label="GitHub">gh</a>
-      <!-- Add more icons if desired -->
+      <!-- Add Facebook, Twitter/X, Instagram etc. if you have them -->
     </div>
 
     <div class="copyright">
@@ -529,7 +680,7 @@
       }
     });
 
-    // Fade-in on scroll
+    // Fade-in observer
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) entry.target.classList.add('show');
