--- a/index.html
+++ b/index.html
@@ -222,12 +222,38 @@
     .about p { font-size: 18px; color: var(--text-muted); }
     .about img { width: 100%; border-radius: 20px; box-shadow: var(--shadow); }
 
-    .journey-grid, .services-grid, .projects-grid, .stories-grid, .tech-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 40px;
-      margin-top: 50px;
+    /* Horizontal scroll container for card sections */
+    .horizontal-scroll {
+      overflow-x: auto;
+      overflow-y: hidden;
+      scroll-snap-type: x mandatory;
+      -webkit-overflow-scrolling: touch;
+      padding: 10px 0;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none;  /* IE & Edge */
     }
+    .horizontal-scroll::-webkit-scrollbar { display: none; } /* Chrome/Safari */
+
+    .horizontal-scroll > .grid {
+      display: flex;
+      flex-wrap: nowrap;
+      gap: 40px;
+      padding: 0 20px;
+    }
+    .horizontal-scroll .card {
+      flex: 0 0 340px; /* fixed width for cards */
+      scroll-snap-align: start;
+    }
+
+    /* Override for tech grid (smaller cards) */
+    .horizontal-scroll .tech-grid {
+      flex-wrap: nowrap;
+      gap: 30px;
+    }
+    .horizontal-scroll .tech-grid .tech-item {
+      flex: 0 0 150px;
+    }
+
     .journey-card, .service-card, .project-card, .story-card {
       background: var(--glass);
       backdrop-filter: var(--blur);
@@ -243,7 +269,6 @@
     .project-card h3, .story-card h3 { color: var(--highlight); margin-bottom: 15px; }
     .project-card p, .story-card p { color: var(--text-muted); }
 
-    .tech-grid { grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
     .tech-item img {
       width: 100%; height: 80px; object-fit: contain; filter: brightness(0.9);
       transition: all .4s;
@@ -364,6 +389,7 @@
     @media (max-width: 768px) {
       .calendly-inline-widget { height: 600px !important; }
       footer { padding: 60px 30px 40px; }
+      .horizontal-scroll .card { flex: 0 0 320px; }
     }
   </style>
 </head>
@@ -417,38 +443,32 @@
 
     <section id="journey" class="fade">
       <h2>Professional Journey</h2>
-      <div class="journey-grid">
-        <div class="journey-card">
-          <img src="company1.png" alt="Company 1 logo" loading="lazy">
-          <h3>Company Name 1</h3>
-          <p class="year-title">2020 - 2022 | IT Support Specialist</p>
-          <div class="details">
+      <div class="horizontal-scroll">
+        <div class="grid">
+          <div class="journey-card card">
+            <img src="company1.png" alt="Company 1 logo" loading="lazy">
+            <h3>Company Name 1</h3>
+            <p class="year-title">2020 - 2022 | IT Support Specialist</p>
             <ul>
-              <li>Provided hands-on IT support and troubleshooting in dynamic environments</li>
-              <li>Managed endpoint devices and basic network configurations</li>
-              <li>Resolved technical issues for 200+ users daily</li>
-              <li>Assisted in system migrations and software deployments</li>
+              <li>Provided hands-on IT support and troubleshooting</li>
+              <li>Managed endpoint devices and network configs</li>
+              <li>Resolved issues for 200+ users daily</li>
             </ul>
           </div>
-        </div>
-        <div class="journey-card">
-          <img src="company2.png" alt="Company 2 logo" loading="lazy">
-          <h3>NGO / Organization Name</h3>
-          <p class="year-title">2022 - 2024 | Systems Administrator</p>
-          <div class="details">
+          <div class="journey-card card">
+            <img src="company2.png" alt="Company 2 logo" loading="lazy">
+            <h3>NGO / Organization Name</h3>
+            <p class="year-title">2022 - 2024 | Systems Administrator</p>
             <ul>
               <li>Supported NGO and logistics infrastructure at scale</li>
               <li>Implemented and maintained Microsoft 365 environments</li>
-              <li>Managed user permissions and collaboration tools</li>
-              <li>Ensured system uptime for critical humanitarian operations</li>
+              <li>Ensured system uptime for critical operations</li>
             </ul>
           </div>
-        </div>
-        <div class="journey-card">
-          <img src="company3.png" alt="Company 3 logo" loading="lazy">
-          <h3>Current Company</h3>
-          <p class="year-title">2024 - Present | Senior IT Systems & Security Specialist</p>
-          <div class="details">
+          <div class="journey-card card">
+            <img src="company3.png" alt="Company 3 logo" loading="lazy">
+            <h3>Current Company</h3>
+            <p class="year-title">2024 - Present | Senior IT Systems & Security Specialist</p>
             <ul>
               <li>Led advanced infrastructure, networking, and cybersecurity projects</li>
               <li>Deployed Kaspersky endpoint security across enterprise</li>
@@ -456,12 +476,10 @@
               <li>Conducted security audits and incident response</li>
             </ul>
           </div>
-        </div>
-        <div class="journey-card">
-          <img src="company4.png" alt="Company 4 logo" loading="lazy">
-          <h3>Company Name 4</h3>
-          <p class="year-title">2018 - 2020 | Junior Network Engineer</p>
-          <div class="details">
+          <div class="journey-card card">
+            <img src="company4.png" alt="Company 4 logo" loading="lazy">
+            <h3>Company Name 4</h3>
+            <p class="year-title">2018 - 2020 | Junior Network Engineer</p>
             <ul>
               <li>Assisted in network setup and maintenance</li>
               <li>Troubleshot connectivity issues</li>
@@ -469,12 +487,10 @@
               <li>Supported remote user access</li>
             </ul>
           </div>
-        </div>
-        <div class="journey-card">
-          <img src="company5.png" alt="Company 5 logo" loading="lazy">
-          <h3>Company Name 5</h3>
-          <p class="year-title">2017 - 2018 | IT Intern</p>
-          <div class="details">
+          <div class="journey-card card">
+            <img src="company5.png" alt="Company 5 logo" loading="lazy">
+            <h3>Company Name 5</h3>
+            <p class="year-title">2017 - 2018 | IT Intern</p>
             <ul>
               <li>Learned basic IT support tasks</li>
               <li>Assisted with hardware installations</li>
@@ -488,95 +504,103 @@
 
     <section id="services" class="fade">
       <h2>Services I Offer</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <i>💻</i>
-          <h3>IT Consultation</h3>
-          <p>Expert advice on system architecture, infrastructure planning, cloud migration, and technology strategy tailored to your business needs.</p>
-        </div>
-        <div class="service-card">
-          <i>🔧</i>
-          <h3>Hardware & Software Repairs</h3>
-          <p>Diagnosis and repair of laptops, desktops, servers, printers, and software issues — both remote and on-site support.</p>
-        </div>
-        <div class="service-card">
-          <i>🛒</i>
-          <h3>Tech Buyers Guide</h3>
-          <p>Personalized recommendations for purchasing laptops, networking gear, security tools, and software to fit your budget and requirements.</p>
-        </div>
-        <div class="service-card">
-          <i>🌐</i>
-          <h3>Network Setup & Security</h3>
-          <p>Design, installation, and securing of wired/wireless networks, firewalls, VPNs, and endpoint protection for homes and businesses.</p>
-        </div>
-        <div class="service-card">
-          <i>☁️</i>
-          <h3>Microsoft 365 & Cloud Solutions</h3>
-          <p>Setup, administration, migration, and optimization of Microsoft 365, Azure, email, and collaboration tools.</p>
-        </div>
-        <div class="service-card">
-          <i>🛡️</i>
-          <h3>Cybersecurity Services</h3>
-          <p>Vulnerability assessments, antivirus deployment, security audits, and incident response planning.</p>
+      <div class="horizontal-scroll">
+        <div class="grid">
+          <div class="service-card card">
+            <i>💻</i>
+            <h3>IT Consultation</h3>
+            <p>Expert advice on system architecture, cloud migration, and tech strategy.</p>
+          </div>
+          <div class="service-card card">
+            <i>🔧</i>
+            <h3>Hardware & Software Repairs</h3>
+            <p>Diagnosis and repair of devices and software — remote & on-site.</p>
+          </div>
+          <div class="service-card card">
+            <i>🛒</i>
+            <h3>Tech Buyers Guide</h3>
+            <p>Personalized recommendations for purchasing laptops, networking gear, security tools.</p>
+          </div>
+          <div class="service-card card">
+            <i>🌐</i>
+            <h3>Network Setup & Security</h3>
+            <p>Design and secure wired/wireless networks, firewalls, VPNs.</p>
+          </div>
+          <div class="service-card card">
+            <i>☁️</i>
+            <h3>Microsoft 365 & Cloud</h3>
+            <p>Setup, administration, migration, and optimization.</p>
+          </div>
+          <div class="service-card card">
+            <i>🛡️</i>
+            <h3>Cybersecurity</h3>
+            <p>Vulnerability assessments, AV deployment, audits & response.</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section id="projects" class="fade">
       <h2>Projects</h2>
-      <div class="projects-grid">
-        <div class="project-card">
-          <h3>IT Infrastructure Upgrade</h3>
-          <p>Designed and deployed LAN, wireless networks, and endpoint security for mid-sized organizations.</p>
-        </div>
-        <div class="project-card">
-          <h3>Endpoint Security Deployment</h3>
-          <p>Implemented Kaspersky Security Center for enterprise-wide endpoint protection and compliance.</p>
-        </div>
-        <div class="project-card">
-          <h3>Digital Logistics System</h3>
-          <p>Built internal systems to streamline logistics, procurement, and operational workflows.</p>
-        </div>
-        <div class="project-card">
-          <h3>Microsoft 365 Administration</h3>
-          <p>Managed users, permissions, collaboration tools, and migration projects.</p>
+      <div class="horizontal-scroll">
+        <div class="grid">
+          <div class="project-card card">
+            <h3>IT Infrastructure Upgrade</h3>
+            <p>Designed and deployed LAN, wireless networks, and endpoint security for mid-sized organizations.</p>
+          </div>
+          <div class="project-card card">
+            <h3>Endpoint Security Deployment</h3>
+            <p>Implemented Kaspersky Security Center for enterprise-wide endpoint protection and compliance.</p>
+          </div>
+          <div class="project-card card">
+            <h3>Digital Logistics System</h3>
+            <p>Built internal systems to streamline logistics, procurement, and operational workflows.</p>
+          </div>
+          <div class="project-card card">
+            <h3>Microsoft 365 Administration</h3>
+            <p>Managed users, permissions, collaboration tools, and migration projects.</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section id="stories" class="fade">
       <h2>Stories & Experiences</h2>
-      <div class="stories-grid">
-        <div class="story-card">
-          <h3>Working in High-Impact Environments</h3>
-          <p>Supporting NGO operations taught me how critical system uptime and security are when technology directly supports humanitarian work.</p>
-        </div>
-        <div class="story-card">
-          <h3>Learning Through Challenges</h3>
-          <p>From network failures to security incidents, each challenge strengthened my problem-solving and decision-making under pressure.</p>
-        </div>
-        <div class="story-card">
-          <h3>Growth Beyond Technical Skills</h3>
-          <p>Collaborating with diverse teams improved my communication, documentation, and leadership abilities.</p>
+      <div class="horizontal-scroll">
+        <div class="grid">
+          <div class="story-card card">
+            <h3>Working in High-Impact Environments</h3>
+            <p>Supporting NGO operations taught me how critical system uptime and security are when technology directly supports humanitarian work.</p>
+          </div>
+          <div class="story-card card">
+            <h3>Learning Through Challenges</h3>
+            <p>From network failures to security incidents, each challenge strengthened my problem-solving and decision-making under pressure.</p>
+          </div>
+          <div class="story-card card">
+            <h3>Growth Beyond Technical Skills</h3>
+            <p>Collaborating with diverse teams improved my communication, documentation, and leadership abilities.</p>
+          </div>
         </div>
       </div>
     </section>
 
     <section id="technologies" class="fade">
       <h2>Technologies & Platforms I've Worked With</h2>
-      <div class="tech-grid">
-        <div class="tech-item"><img src="https://brand-assets.security.cisco.com/secure/meraki-dark.svg" alt="Cisco Meraki" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Windows_11_logo.svg" alt="Windows 10/11" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Ubuntu_logo.svg" alt="Ubuntu Linux" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Microsoft_365_%282022%29.svg" alt="Microsoft 365" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/ServiceNow_logo.svg" alt="ServiceNow" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Jira_Logo.svg" alt="Atlassian Jira" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Sage_Group_logo.svg" alt="Sage" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zoom_logo.svg" alt="Zoom" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Microsoft_Office_Teams_%282019%E2%80%932025%29.svg" alt="Microsoft Teams" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Logitech_logo.svg" alt="Logitech" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Kaspersky_Lab_logo.svg" alt="Kaspersky" loading="lazy"></div>
-        <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Sophos_logo.svg" alt="Sophos" loading="lazy"></div>
+      <div class="horizontal-scroll">
+        <div class="grid tech-grid">
+          <div class="tech-item"><img src="https://brand-assets.security.cisco.com/secure/meraki-dark.svg" alt="Cisco Meraki" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Windows_11_logo.svg" alt="Windows 10/11" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Ubuntu_logo.svg" alt="Ubuntu Linux" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Microsoft_365_%282022%29.svg" alt="Microsoft 365" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/ServiceNow_logo.svg" alt="ServiceNow" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Jira_Logo.svg" alt="Atlassian Jira" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Sage_Group_logo.svg" alt="Sage" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Zoom_logo.svg" alt="Zoom" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c9/Microsoft_Office_Teams_%282019%E2%80%932025%29.svg" alt="Microsoft Teams" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Logitech_logo.svg" alt="Logitech" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Kaspersky_Lab_logo.svg" alt="Kaspersky" loading="lazy"></div>
+          <div class="tech-item"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Sophos_logo.svg" alt="Sophos" loading="lazy"></div>
+        </div>
       </div>
       <h3 style="font-size:28px; margin:80px 0 40px; color:var(--highlight); text-align:center;">Certified Partner Experience</h3>
       <div class="partner-badges">
@@ -648,7 +672,6 @@
     <div class="social-icons">
       <a href="https://www.linkedin.com/in/your-profile" target="_blank" aria-label="LinkedIn">in</a>
       <a href="https://github.com/your-username" target="_blank" aria-label="GitHub">gh</a>
-      <!-- Add Facebook, Twitter/X, Instagram etc. if you have them -->
     </div>
 
     <div class="copyright">
