Update image sources in index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       height: 100vh;
       min-height: 720px;
       background: linear-gradient(rgba(10,20,26,0.82), rgba(10,20,26,0.88)),
-                  url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover no-repeat fixed;
+                  url('desktop.jpg') center/cover no-repeat fixed;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -488,7 +488,7 @@
       <p>IT Systems & Cybersecurity Specialist with hands-on experience in enterprise IT support, network infrastructure, Microsoft 365 administration, endpoint protection (Kaspersky, Sophos), vulnerability assessments and secure LAN/WLAN design.</p>
       <p>Based in Kampala, Uganda — passionate about helping businesses and organizations build reliable, secure and future-ready technology environments.</p>
     </div>
-    <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru professional portrait"/>
+    <img src="wanjeru.jpg" alt="Marc Wanjeru professional portrait"/>
   </div>
 </section>
 
