Update image source in about section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <!-- Left: Circular image with tech overlay -->
     <div class="about-image-wrapper">
       <div class="about-image-circle">
-        <img src="wanjeru.jpg" alt="Marc Wanjeru" class="about-image"/>
+        <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru" class="about-image"/>
       </div>
       <div class="tech-overlay"></div>
     </div>
